--- a/cv/index.html
+++ b/cv/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 <head>
   <title>CV de Juan Camilo Betancur</title>
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div style="display:inline-block;width:30%;margin-top:20px;">
-    <img src="images/medos.png" width="300px">
+    <img src="Images/medos.png" width="300px">
     </div>
   </div>
 
