--- a/cv/index.html
+++ b/cv/index.html
@@ -29,7 +29,7 @@
       </div>
     </div>
     <div style="display:inline-block;width:30%;margin-top:20px;">
-    <img src="Images/medos.png" width="300px">
+    <img src="Images/me.jpg" width="300px">
     </div>
   </div>
 
