--- a/cv/index.html
+++ b/cv/index.html
@@ -23,7 +23,7 @@
        <dl>
          <dt style="font-size:22px;text-transform:uppercase;margin-bottom:12px;margin-top:36px">Tecnico en Desarrollo de software</dt>
          <dd style="margin:0;">2010-2010 CESDE </dd>
-         <dt style="font-size:22px;text-transform:uppercase;margin-bottom:12px;margin-top:36px">Tecnolo en sistemas</dt>
+         <dt style="font-size:22px;text-transform:uppercase;margin-bottom:12px;margin-top:36px">Tecnologo en sistemas</dt>
          <dd style="margin:0;">2012-2016 Universidad autonoma de las americas</dd>
      </dl>
       </div>
