--- a/Css Animation/Index.html
+++ b/Css Animation/Index.html
@@ -18,15 +18,25 @@ Steps:
 <div id="clouds">
 	<div class="cloud x1"></div>
 	<!-- Time for multiple clouds to dance around -->
+  <img src="Recursos/images/airplane.png" id="aeroplane"  width="300px" class="responsive"/>
 	<div class="cloud x2"></div>
 	<div class="cloud x3"></div>
-  <img src="Recursos/images/airplane.png" id="aeroplane"  width="300px" class="responsive"/>
-	<div class="cloud x4"></div>
-	<div class="cloud x5"></div>
 
+  <div class="cloud x4"></div>
 
+  <form>
+    <center>
+
+    <input type="text" id="fname" name="fname" placeholder="Usuario">
+    <br/>
+
+    <input type="password" id="lname" name="lname" placeholder="Contraseña">
+  </center>
+    <div class="cloud x5"></div>
+  </form>
 
 </div>
+
 
 <!-- Thats the markup! -->
 <!-- That looks cool. We are done!! -->
