--- a/boletines/index.html
+++ b/boletines/index.html
@@ -2,21 +2,20 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <title>Jugadores de futbol favoritos</title>
+    <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assets/css/normalize.css" media="screen" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css" media="screen" />
-    <title></title>
+    <link rel="stylesheet" type="text/css" href="../assets/css/animate.css" media="screen" />
   </head>
  <body>
-
-
-
    <div class="container">
-     <div class="content">
+     <div class="content animated fadeInDown ">
        <header>
-          <h1>Jugadores favoritos</h1>
+          <h1 class="title">Jugadores de futbol favoritos</h1>
        </header>
-       <table>
+       <table class="table">
          <thead>
            <th>#</th>
            <th>Nombre</th>
@@ -36,7 +35,7 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
           </td>
-          <td></td>
+          <td><a href="./jugadores/messi.html"> ver mas</a> </td>
           </tr>
           <tr>
           <td>2</td>
@@ -49,7 +48,7 @@
             <i class="fas fa-star"></i>
             <i class="fas fa-star"></i>
           </td>
-          <td></td>
+        <td><a href="./jugadores/messi.html"> ver mas</a> </td>
           </tr>
           <tr>
           <td>3</td>
@@ -59,8 +58,10 @@
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
           <i class="fas fa-star"></i>
+          <i class="far fa-star"></i>
+          <i class="far fa-star"></i>
           </td>
-          <td></td>
+          <td><a href="./jugadores/messi.html"> ver mas</a> </td>
           </tr>
           <tr>
               <td>4</td>
@@ -69,8 +70,11 @@
           <td>
            <i class="fas fa-star"></i>
            <i class="fas fa-star"></i>
+           <i class="far fa-star"></i>
+           <i class="far fa-star"></i>
+           <i class="far fa-star"></i>
           </td>
-          <td></td>
+          <td><a href="./jugadores/messi.html"> ver mas</a> </td>
           </tr>
 
         </tbody>
