--- a/cv/index.html
+++ b/cv/index.html
@@ -57,7 +57,7 @@
       <h3 style="font-size:36px;font-weight:700">Cuentas sociales</h3>
        <ul style="margin-top:12px;padding:0px;">
         <li style="margin-top:12px;">
-           <a href="https://www.google.com/">Gitlab</a>
+           <a href="https://github.com/jbetancurmejia" target="_blank">github</a>
         </li>
         <li style="margin-top:12px;">
            <a href="https://www.google.com/">Gitlab</a>
