--- a/boletines/index.html
+++ b/boletines/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Jugadores de futbol favoritos</title>
     <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,700" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./assets/css/normalize.css" media="screen" />
@@ -11,7 +12,7 @@
   </head>
  <body>
    <div class="container">
-     <div class="content animated fadeInDown ">
+     <div class="content animated fadeInDown">
        <header>
           <h1 class="title">Jugadores de futbol favoritos</h1>
        </header>
