--- a/boletines/index.html
+++ b/boletines/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./assets/css/main.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="../assets/css/animate.css" media="screen" />
+
   </head>
  <body>
    <div class="container">
@@ -82,5 +83,6 @@
        </table>
      </div>
    </div>
+   <script src="../javascript/main.js"></script>
   </body>
 </html>
